you can fix and releae points, better rendering, arrow heads

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8,6 +8,29 @@ html, body{
     width: 100%;
     height: 100%;
 }
-.dependency_graph svg line{
+
+line{
     stroke: #888;
+}
+
+.link {
+  fill: none;
+  stroke: #666;
+  stroke-width: 1.5px;
+}
+
+circle {
+  fill: #ccc;
+  stroke: #333;
+  stroke-width: 1.5px;
+}
+
+.fixed {
+  fill: #f00;
+}
+
+text {
+  font: 10px sans-serif;
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
