--- a/public/css/application.css
+++ b/public/css/application.css
@@ -12,13 +12,13 @@ html, body, .dependency_graph, .dependency_graph svg{
 }
 
 circle {
-  fill: #ccc;
+  fill: #fff;
   stroke: #333;
   stroke-width: 1.5px;
 }
 
 .fixed circle {
-  fill: #f00;
+  stroke-width: 3px;
 }
 
 text {
