--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,9 @@
   <body>
     <div class='dependency_graph'>
       <svg></svg>
+      <div class="loading">
+        Parsing files...
+      </div>
     </div>
     <script src='/javascript/lodash.js' type='text/javascript'></script>
     <script src='/javascript/d3.js' type='text/javascript'></script>
