add node type to the node circle

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -36,3 +36,7 @@ text {
   pointer-events: none;
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 }
+
+text.type{
+    font: 7px sans-serif;
+}
