--- a/views/index.erb
+++ b/views/index.erb
@@ -12,9 +12,22 @@
         Parsing files...
       </div>
     </div>
+    <div class="toolbox">
+      <div class="panel">
+        <div class="title"> Ignore </div>
+        <div class="content">
+          <label>Namespace</label>
+          <textarea id="ignore_by_namespace"></textarea>
+          <label><input type="checkbox" id="ignore_modules"/> Modules</label>
+          <label><input type="checkbox" id="ignore_classes"/> Classes</label>
+        </div>
+      </div>
+    </div>
+
     <script src='/javascript/lodash.js' type='text/javascript'></script>
     <script src='/javascript/d3.js' type='text/javascript'></script>
     <script src='/javascript/jquery.js' type='text/javascript'></script>
     <script src='/javascript/application.js' type='text/javascript'></script>
+    <script src='/javascript/toolbox.js' type='text/javascript'></script>
   </body>
 </html>
