--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,15 @@
     </div>
     <div class="toolbox">
       <div class="panel">
+        <div class="title"> Search </div>
+        <div class="content">
+          <label>Namespace</label>
+          <textarea id="highlight_by_namespace"></textarea>
+          <label><input type="checkbox" id="highlight_modules"/> Modules</label>
+          <label><input type="checkbox" id="highlight_classes"/> Classes</label>
+        </div>
+      </div>
+      <div class="panel">
         <div class="title"> Ignore </div>
         <div class="content">
           <label>Namespace</label>
