Stopping simulation and changing collision radius

--- a/views/index.erb
+++ b/views/index.erb
@@ -31,6 +31,15 @@
           <label><input type="checkbox" id="ignore_classes"/> Classes</label>
         </div>
       </div>
+      <div class="panel">
+        <div class="title"> Display </div>
+        <div class="content">
+          <input type="button" id="pause_simulation" value="Pause animation"/>
+          <label>Force Collide</label>
+          <input id="force_collide" type="range" value="80" min="0" max="500"/>
+          <label><input type="checkbox" id="hide_namespaces"/> Hide namespaces</label>
+        </div>
+      </div>
     </div>
 
     <script src='/javascript/lodash.js' type='text/javascript'></script>
