--- a/public/css/application.css
+++ b/public/css/application.css
@@ -48,8 +48,13 @@ text.type{
 .highlighted, .name_highlighted, .type_highlighted{
     fill: #008ef3;
 }
+
 .highlighted circle, .name_highlighted circle, .type_highlighted circle{
     stroke: #008ef3;
+}
+
+.hide_namespace .namespace{
+    display: none;
 }
 
 /* ============================ */
@@ -90,17 +95,25 @@ text.type{
     padding: 5px;
 }
 
-label{
+.panel label{
     display: block;
     margin-top: 10px;
     margin-bottom: 5px;
 }
 
-textarea{
+.panel textarea{
     display: block;
     width: 100%;
     max-width: 100%;
     height: 100px;
     padding: 0px;
     border: 1px solid #ddd
+}
+
+.panel input[type=button],
+.panel input[type=range],
+.panel button{
+    width: 100%;
+    max-width: 100%;
+    display: block;
 }
