--- a/views/index.erb
+++ b/views/index.erb
@@ -38,6 +38,7 @@
           <label>Force Collide</label>
           <input id="force_collide" type="range" value="80" min="0" max="500"/>
           <label><input type="checkbox" id="hide_namespaces"/> Hide namespaces</label>
+          <label><input type="checkbox" id="hide_relations"/> Hide relations</label>
         </div>
       </div>
     </div>
