--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,12 @@
     </div>
     <div class="toolbox">
       <div class="panel">
+        <div class="title"> Node Details </div>
+        <div class="content" id="information_panel">
+          Please click on any node.
+        </div>
+      </div>
+      <div class="panel">
         <div class="title"> Search </div>
         <div class="content">
           <label>Namespace</label>
