--- a/views/index.erb
+++ b/views/index.erb
@@ -10,43 +10,6 @@
     <div class='dependency_graph'>
       <svg></svg>
     </div>
-    <div class="toolbox">
-      <div class="panel">
-        <div class="title"> Node Details </div>
-        <div class="content" id="information_panel">
-          Please click on any node.
-        </div>
-      </div>
-      <div class="panel">
-        <div class="title"> Search </div>
-        <div class="content">
-          <label>Namespace</label>
-          <textarea id="highlight_by_namespace"></textarea>
-          <label><input type="checkbox" id="highlight_modules"/> Modules</label>
-          <label><input type="checkbox" id="highlight_classes"/> Classes</label>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="title"> Ignore </div>
-        <div class="content">
-          <label>Namespace</label>
-          <textarea id="ignore_by_namespace"></textarea>
-          <label><input type="checkbox" id="ignore_modules"/> Modules</label>
-          <label><input type="checkbox" id="ignore_classes"/> Classes</label>
-        </div>
-      </div>
-      <div class="panel">
-        <div class="title"> Display </div>
-        <div class="content">
-          <input type="button" id="pause_simulation" value="Pause animation"/>
-          <label>Force Collide</label>
-          <input id="force_collide" type="range" value="80" min="0" max="500"/>
-          <label><input type="checkbox" id="hide_namespaces"/> Hide namespaces</label>
-          <label><input type="checkbox" id="hide_relations"/> Hide relations</label>
-        </div>
-      </div>
-    </div>
-
     <script src='https://unpkg.com/lodash@4.17.4/lodash.min.js' type='text/javascript'></script>
     <script src='https://unpkg.com/d3@4.13.0/build/d3.min.js' type='text/javascript'></script>
     <script src='https://unpkg.com/jquery@3.3.1/dist/jquery.min.js' type='text/javascript'></script>
@@ -54,6 +17,10 @@
      var data = <%= data %>
     </script>
     <script type='text/javascript'><%= file('javascript/application.js') %></script>
-    <script type='text/javascript'><%= file('javascript/toolbox.js') %></script>
+
+    <% if toolbox? %>
+      <%= erb :toolbox %>
+      <script type='text/javascript'><%= file('javascript/toolbox.js') %></script>
+    <% end %>
   </body>
 </html>
