add save/restore layout feature

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,8 @@
     <script src='https://unpkg.com/lodash@4.17.4/lodash.min.js' type='text/javascript'></script>
     <script src='https://unpkg.com/d3@4.13.0/build/d3.min.js' type='text/javascript'></script>
     <script type='text/javascript'>
-     var data = <%= data %>
+     var data = <%= data %>;
+     var layout = <%= layout %>;
     </script>
     <script type='text/javascript'><%= file('javascript/application.js') %></script>
 
