--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -42,7 +42,8 @@
   <div class="card mt-2">
     <div class="card-header">Display</div>
     <div class="card-body">
-      <input type="button" id="pause_simulation" class="btn btn-secondary btn-block" value="Pause animation"/>
+      <button type="button" id="download_layout" class="btn btn-secondary btn-block">Download layout</button>
+      <button type="button" id="pause_simulation" class="btn btn-secondary btn-block">Pause animation</button>
     </div>
     <div class="card-body">
       <label class="form-label">Force Collide</label>
