add margin to left of boxes

--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -1,11 +1,11 @@
 <div class="toolbox">
-  <div class="card mt-2">
+  <div class="card ml-2 mt-2">
     <div class="card-header">Node Details</div>
     <div class="card-body" id="information_panel">
       Please click on any node.
     </div>
   </div>
-  <div class="card mt-2">
+  <div class="card ml-2 mt-2">
     <div class="card-header">Search</div>
     <div class="card-body">
       <label class="form-label">Namespace</label>
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <div class="card mt-2">
+  <div class="card ml-2 mt-2">
     <div class="card-header">Ignore</div>
     <div class="card-body">
       <label>Namespace</label>
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="card mt-2">
+  <div class="card ml-2 mt-2">
     <div class="card-header">Display</div>
     <div class="card-body">
       <button type="button" id="download_layout" class="btn btn-secondary btn-block">Download layout</button>
