--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -12,6 +12,10 @@
       <textarea id="highlight_by_namespace" class="form-control" rows="5"></textarea>
     </div>
     <div class="card-body">
+      <label class="form-label">File Path</label>
+      <textarea id="highlight_by_file_path" class="form-control" rows="5"></textarea>
+    </div>
+    <div class="card-body">
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="highlight_modules"/>
         <label class="form-check-label">Modules</label>
