--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -33,6 +33,10 @@
       <textarea id="ignore_by_namespace" class="form-control" rows="5"></textarea>
     </div>
     <div class="card-body">
+      <label>File Path</label>
+      <textarea id="ignore_by_file_path" class="form-control" rows="5"></textarea>
+    </div>
+    <div class="card-body">
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="ignore_modules"/>
         <label class="form-check-label">Modules</label>
