fix all and release all buttons

--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -52,6 +52,8 @@
     <div class="card-body">
       <button type="button" id="download_layout" class="btn btn-secondary btn-block">Download layout</button>
       <button type="button" id="pause_simulation" class="btn btn-secondary btn-block">Pause animation</button>
+      <button type="button" id="fix_all" class="btn btn-secondary btn-block">Fix all</button>
+      <button type="button" id="release_all" class="btn btn-secondary btn-block">Release all</button>
     </div>
     <div class="card-body">
       <label class="form-label">Force Collide</label>
