--- a/views/toolbox.erb
+++ b/views/toolbox.erb
@@ -1,11 +1,5 @@
 <div class="toolbox">
   <div class="card ml-2 mt-2">
-    <div class="card-header">Node Details</div>
-    <div class="card-body" id="information_panel">
-      Please click on any node.
-    </div>
-  </div>
-  <div class="card ml-2 mt-2">
     <div class="card-header">Search</div>
     <div class="card-body">
       <label class="form-label">Namespace</label>
@@ -69,3 +63,5 @@
     </div>
   </div>
 </div>
+
+<div id="information_panel" class="card"></div>
